removed overlay js. fixed wordwrap on chat

--- a/css/chat.css
+++ b/css/chat.css
@@ -24,4 +24,5 @@
     max-width: 172px;
     float: right;
     padding:4px;
+    word-wrap: break-word;
 }
